--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-kue",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Kue implementation for TrailsJs.io",
   "homepage": "http://trailsjs.io",
   "author": {
@@ -18,16 +18,16 @@
   ],
   "dependencies": {
     "kue": "0.11.5",
-    "trailpack": "2.0.1"
+    "trailpack": "1.0.5"
   },
   "devDependencies": {
-    "lodash": "^4.11.1",
-    "trails": "latest",
-    "eslint": "^2.4",
-    "eslint-config-trails": "^1.0.4",
-    "mocha": "^2.4.5",
-    "smokesignals": "^1.0.9",
-    "trailpack-core": "^1.0.0-beta-6"
+    "lodash": "4.11.1",
+    "trails": "1.1.1",
+    "eslint": "2.4",
+    "eslint-config-trails": "1.0.4",
+    "mocha": "2.4.5",
+    "smokesignals": "1.0.9",
+    "trailpack-core": "1.0.0-beta-6"
   },
   "scripts": {
     "test": "eslint . && mocha"
