--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "trailjs"
   ],
   "dependencies": {
+    "joi": "10.2.0",
     "kue": "0.11.5",
-    "trailpack": "1.0.5"
+    "lodash": "4.17.4",
+    "trailpack": "2.1.0"
   },
   "devDependencies": {
-    "lodash": "4.11.1",
-    "trails": "1.1.1",
-    "eslint": "2.4",
-    "eslint-config-trails": "1.0.4",
-    "mocha": "2.4.5",
-    "smokesignals": "1.0.9",
-    "trailpack-core": "1.0.0-beta-6"
+    "eslint": "3.14.0",
+    "eslint-config-trails": "2.0.6",
+    "lodash": "4.17.4",
+    "mocha": "3.2.0",
+    "smokesignals": "2.1.0",
+    "trails": "2.0.0"
   },
   "scripts": {
-    "test": "eslint . && mocha"
+    "test": "eslint --fix . && mocha"
   },
   "engines": {
     "node": ">= 4.0.0"
