--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trailpack-kue",
-  "version": "0.3.2",
+  "version": "1.0.0",
   "description": "Kue implementation for TrailsJs.io",
   "homepage": "http://trailsjs.io",
   "author": {
@@ -9,20 +9,14 @@
     "url": "https://github.com/lobetia/trailpack-kue"
   },
   "main": "index.js",
-  "keywords": [
-    "kue",
-    "trailpack",
-    "trails",
-    "trailsj",
-    "trailjs"
-  ],
+  "keywords": ["kue", "trailpack", "trails", "trailsj", "trailjs"],
   "dependencies": {
     "kue": "0.11.5",
     "trailpack": "1.0.5"
   },
   "devDependencies": {
     "lodash": "4.11.1",
-    "trails": "1.1.1",
+    "trails": "v2-latest",
     "eslint": "2.4",
     "eslint-config-trails": "1.0.4",
     "mocha": "2.4.5",
@@ -30,7 +24,8 @@
     "trailpack-core": "1.0.0-beta-6"
   },
   "scripts": {
-    "test": "eslint . && mocha"
+    "test": "eslint . && mocha",
+    "fix-lint": "eslint --fix ."
   },
   "engines": {
     "node": ">= 4.0.0"
